Notification work updates

--- a/Customer.Model/Customer.Model.csproj
+++ b/Customer.Model/Customer.Model.csproj
@@ -17,4 +17,8 @@
     <Folder Include="Validators\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Customer.Data\Customer.Data.csproj" />
+  </ItemGroup>
+
 </Project>
