--- a/NotificationApi/Properties/launchSettings.json
+++ b/NotificationApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5066",
+      "applicationUrl": "http://161.97.137.187:1008",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
