--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,34 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# From .NET Core 3.0 you can use the command: `dotnet new gitignore` to generate a customizable .gitignore file
 
-# IDEs and editors
-.vs/
-.idea/
-/aspnet-core/src/MyCompanyName.AbpZeroTemplate.Web.Mvc/Properties/PublishProfiles/FolderProfile.pubxml
-aspnet-core/test/JMeter/AspNetZeroDotNetCoreSimpleTest.jmx
-/aspnet-core/build/outputs
+*.swp
+*.*~
+project.lock.json
+.DS_Store
+*.pyc
+
+# Visual Studio Code
+.vscode
 
 # User-specific files
 *.suo
 *.user
+*.userosscache
 *.sln.docstates
-aspnet-core/DeleteBinsAndObjs.bat
 
-*.pubxml
-aspnet-core/src/MyCompanyName.AbpZeroTemplate.Web.Host/healthchecksdb
-aspnet-core/src/MyCompanyName.AbpZeroTemplate.Web.Public/healthchecksdb
-aspnet-core/src/MyCompanyName.AbpZeroTemplate.Web.Mvc/healthchecksdb
-*.pfx
-\aspnet-core\src\MyCompanyName.AbpZeroTemplate.Web.Host\wwwroot\UploadFiles
-UploadFiles/
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+msbuild.log
+msbuild.err
+msbuild.wrn
+
+# Visual Studio 2015
+.vs/
