--- a/NotificationApi/appsettings.Development.json
+++ b/NotificationApi/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=.;Database=test;Trusted_Connection=True; PersistSecurityInfo=true; encrypt=false;"
-    "DefaultConnection": "Data Source=161.97.137.187,1433;Initial Catalog=NotificationDb;User ID=sa;Password=Arslanriaz12345; MultipleActiveResultSets=True;encrypt=false;"
+    // "DefaultConnection": "Server=.;Database=NotificationDb;Trusted_Connection=True; PersistSecurityInfo=true; encrypt=false;MultipleActiveResultSets=True;"
+    // "DefaultConnection": "Server=.;Database=partnerlinqlocaldb;Trusted_Connection=True; PersistSecurityInfo=true; encrypt=false;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Data Source=161.97.137.187,1433;Initial Catalog=NotificationUATDb;User ID=sa;Password=Arslanriaz12345; MultipleActiveResultSets=True;encrypt=false;"
   },
   "BaseURL": "https://localhost:44328",
   "Logging": {
